# python-template

./: .env.example  .gitattributes  .gitignore  CMakeLists.txt  README.md  d  pyproject.toml  rename_project.sh
.github/workflows/: python-app.yml
configs/: logger.yaml
scripts/: rename_project.sh
src/: __main__.py  config.py  constants.py  logging_config.py  main.py  utils.py
src/core/: logging.py  multiprocessing.py  multithreading.py
src/cpp/: hello.cpp  hello_bindings.cpp
src/hello_world_cpp/: _hello_cpp.pyi  hello_world.py
src/utils/: torch.py
tests/: test_dummy.py
