[project]
name = "python-template"
version = "0.1.0"
description = "Add your description here"
authors = [{name = "Adrian Mincu."}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorlog>=6.10.1",
    "matplotlib>=3.10.7",
    "numpy>=2.4.3",
    "pandas>=2.3.3",
    "pybind11>=3.0.4",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pyyaml>=6.0.3",
    "scikit-build-core>=0.12.2",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["scikit-build-core>=0.9", "pybind11>=2.13"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
wheel.packages = ["src"]
cmake.build-type = "Release"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C", "W"]
unfixable = ["F401"]
exclude = ["__pycache__", "build", "dist", "src.egg-info"]

[tool.ruff.format]
line-ending = "auto"

[tool.ty.environment]
python-version = "3.12"

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.12"
# extension modules are backed by ``_hello_cpp.pyi`` only until the native module is built.
reportMissingModuleSource = false

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "ruff>=0.14.8",
    "ty>=0.0.32",
    "types-pyyaml>=6.0.12.20250915",
]
